welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {


	for ( k <- 0 to nums.length-3) 
	if ((nums(k) == nums(k+1)) && (nums(k+1) ==  nums(k+2)))
	return true
	else return false

}
